--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
             <input type="password" class="input" name="userPassword" id="password" required>
         </div>
         <div class="btn">
-            <button href="index.html">新規登録</button>
+            <button>新規登録</button>
         </div>
     </form>
     </main>
