--- a/blog_list.html
+++ b/blog_list.html
@@ -6,21 +6,22 @@
     <title>ブログリスト</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body class="blog-list-body">
+<body class="blog-body">
     <header>
         <div class="logo">
             <a href=""><img src="/img/logo.png" alt=""></a>
         </div>
-        <ul class="logout">
-            <li>ログアウト</li>
+        <ul class="logo-list">
+            <li><a href="/blog_list.html">ブログ一覧</a></li>
+            <li><a href="">ログアウト</a></li>
         </ul>
         <h2>ブログ一覧</h2>
     </header>
     <main>
         <article>
             <section>
-                <div class="blog-register">
-                    <a href="" class="blog-register-btn">新規ブログ作成</a>
+                <div class="blog-list-register">
+                    <a href="/blog_register.html" class="blog-list-register-btn">新規ブログ作成</a>
                 </div>
             </section>
             <ul class="blogs">
@@ -33,11 +34,14 @@
                 </li>
             </ul>
         </article>
-        <div class="blog-list-img">
+        <div class="blog-list-backBtn">
+            <button class="back-btn" onclick="history.back();" type="button">戻る</button>
+        </div>
+        <div class="blog-bottom-img">
             <img src="/img/85768331_480x415.gif" alt="">
         </div>
     </main>
-    <footer class="blog-list-footer">
+    <footer class="blog-footer">
         <div>
             <small>&copy; 2024 Chiikawa</small>
         </div>
